--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
 </head>
 
+
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+    <img class="top-cloud" src="cloud.png" alt="cloud-image">
 
     <h1>I'm Mrinal</h1>
     <h2>a web designer</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
-    <img src="images/mountain.png" alt="cloud-image">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
+    <img src="mountain.png" alt="cloud-image">
 
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="F:\web development\css site\mrinal.jpg" alt="profile">
+      <img src="mrinal.jpg" alt="profile">
       <h2>Hi! there.</h2>
       <p class="intro">I am mainframe developer and a web designer.I am working as System Engineer for INFOSYS.</p>
     </div>
@@ -30,25 +31,25 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="skill-image1" src="F:\web development\css site\images\data.png" alt="frontend">
+        <img class="skill-image1" src="data.png" alt="frontend">
         <h3>Web Design</h3>
         <p>Structuring and styling of webpages by using HTML and CSS.</p>
       </div>
 
       <div class="skill-row">
-        <img class="skill-image2" src="F:\web development\css site\images\computer.png" alt="mainframe">
+        <img class="skill-image2" src="computer.png" alt="mainframe">
         <h3>Mainframe</h3>
         <p>I have a basic knowledge about Mainframe concepts like JCL, COBOL, DB2, CICS & REXX..</p>
       </div>
       <div class="skill-row">
-        <img class="skill-image3" src="F:\web development\css site\images\file.png" alt="python">
+        <img class="skill-image3" src="file.png" alt="python">
         <h3>PYTHON</h3>
 
         <p>I have basic understanding of programming in PYTHON Language which inludes various data structures like
           lists,dictionary,sets,tuples,stacks and queues and different object oriented programming concepts.</p>
       </div>
       <div class="skill-row">
-        <img class="skill-image4" src="F:\web development\css site\images\interface.png" alt="sql">
+        <img class="skill-image4" src="interface.png" alt="sql">
         <h3>SQL</h3>
 
         <p>I have an understanding of relational databases and various concepts like joins and subqueries related to them.</p>
@@ -69,7 +70,7 @@
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    
+
 
 
     <p>© 2020 Mrinal Gupta.</p>
